--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,18 +1,16 @@
-<ion-content>
-  <ion-row  class="ion-padding">
-    <ion-col>
-        <span>Status:</span>
-    </ion-col>
-    <ion-col>
-      <ion-icon color="success" name="checkmark-circle-outline"></ion-icon>
-    </ion-col>
-    <ion-col>
-      <span>Extraction:</span>
-    </ion-col>
-    <ion-col>
-      <ion-icon color="danger" name="close-circle-outline"></ion-icon>
-    </ion-col>
- </ion-row>
+<ion-content class="ion-padding">
+  <div id="status_bar">
+    <ion-row class="ion-align-items-center">
+      <ion-col>Status:</ion-col>
+      <ion-col>
+        <ion-icon color="success" name="checkmark-circle-outline"></ion-icon>
+      </ion-col>
+      <ion-col>Extraction:</ion-col>
+      <ion-col>
+        <ion-icon color="danger" name="close-circle-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+  </div>
 
   <ion-segment [(ngModel)]="calendar.mode">
     <ion-segment-button value="month">
@@ -25,7 +23,7 @@
       <ion-label>Day</ion-label>
     </ion-segment-button>
   </ion-segment>
- 
+
   <!-- <ion-row>
     <ion-col size="6">
       <ion-button (click)="createRandomEvents()" expand="block" fill="outline">
@@ -38,7 +36,7 @@
       </ion-button>
     </ion-col>
   </ion-row> -->
- 
+
   <ion-row>
     <!-- Move back one screen of the slides -->
     <ion-col size="2">
@@ -46,11 +44,11 @@
         <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-col>
- 
+
     <ion-col size="8" class="ion-text-center">
       <h2>{{ viewTitle }}</h2>
     </ion-col>
- 
+
     <!-- Move forward one screen of the slides -->
     <ion-col size="2">
       <ion-button fill="clear" (click)="next()">
@@ -58,8 +56,8 @@
       </ion-button>
     </ion-col>
   </ion-row>
- 
-  <calendar
+
+  <!-- <calendar
     [showEventDetail]="false"
     [eventSource]="eventSource"
     [calendarMode]="calendar.mode"
@@ -71,7 +69,7 @@
     step="30"
     startingDayWeek="1"
   >
-  </calendar>
+  </calendar> -->
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>
