--- a/src/app/pages/cal-modal/cal-modal.page.html
+++ b/src/app/pages/cal-modal/cal-modal.page.html
@@ -50,13 +50,14 @@
     <!-- Temps -->
     <ion-list>
       <ion-item lines="full">
-        <ion-select placeholder="Activity duration">
-          <ion-select-option value="0.25">Quarter a day</ion-select-option>
-          <ion-select-option value="0.5">Half a day</ion-select-option>
-          <ion-select-option value="1">All day</ion-select-option>
-        </ion-select>
+      <ion-select placeholder="Activity duration">
+        <ion-select-option value="0.25">Quarter a day</ion-select-option>
+        <ion-select-option value="0.5">Half a day</ion-select-option>
+        <ion-select-option value="1">All day</ion-select-option>
+      </ion-select>
       </ion-item>
     </ion-list>
+
     <!-- Commentaire -->
     <ion-item lines="full">
       <ion-label position="floating">Comment</ion-label>
@@ -69,5 +70,24 @@
       </ion-col>
     </ion-row>
   </form>
+
+  <ion-list-header>
+    <ion-label><h2>Activity of the day</h2></ion-label>
+  </ion-list-header>
+
+  <ion-list>
+    <ion-item>
+      <ion-label>1234</ion-label>
+      <ion-label slot="end">0,25 day</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>8735</ion-label>
+      <ion-label slot="end">0,25 day</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>3456</ion-label>
+      <ion-label slot="end">0,5 day</ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
