--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,7 +24,7 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ion-row>
+  <!-- <ion-row>
     <ion-col size="6">
       <ion-button (click)="createRandomEvents()" expand="block" fill="outline">
         Add random events
@@ -35,7 +35,7 @@
         Remove all events
       </ion-button>
     </ion-col>
-  </ion-row>
+  </ion-row> -->
 
   <ion-row>
     <!-- Move back one screen of the slides -->
@@ -57,7 +57,7 @@
     </ion-col>
   </ion-row>
 
-  <calendar
+  <!-- <calendar
     [eventSource]="eventSource"
     [calendarMode]="calendar.mode"
     [currentDate]="calendar.currentDate"
@@ -67,7 +67,7 @@
     endHour="18"
     step="30"
     startingDayWeek="1">
-  </calendar>
+  </calendar> -->
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>
