--- a/src/app/pages/cal-modal/cal-modal.page.html
+++ b/src/app/pages/cal-modal/cal-modal.page.html
@@ -33,21 +33,20 @@
   >
   </calendar> -->
 
-  <form [formGroup]="activityForm" (ngSubmit)="submitForm()" novalidate>
+  <form #activityForm="ngForm" (ngSubmit)="onSubmitForm()" novalidate>
     <!-- Prism number -->
     <ion-item lines="full">
       <ion-label position="floating">Ticket number</ion-label>
-      <ion-input type="number" value="333" required></ion-input>
+      <ion-input type="number" required></ion-input>
     </ion-item>
-    <!-- Description -->
     <!-- Temps -->
     <ion-list>
       <ion-item lines="full">
-      <ion-select placeholder="Activity duration" required>
-        <ion-select-option value="0.25">Quarter a day</ion-select-option>
-        <ion-select-option value="0.5">Half a day</ion-select-option>
-        <ion-select-option value="1">All day</ion-select-option>
-      </ion-select>
+        <ion-select placeholder="Activity duration" required>
+          <ion-select-option value="0.25">Quarter a day</ion-select-option>
+          <ion-select-option value="0.5">Half a day</ion-select-option>
+          <ion-select-option value="1">All day</ion-select-option>
+        </ion-select>
       </ion-item>
     </ion-list>
 
@@ -59,7 +58,9 @@
 
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="danger" expand="block">Create</ion-button>
+        <ion-button type="submit" color="danger" expand="block"
+          >Create</ion-button
+        >
       </ion-col>
     </ion-row>
   </form>
@@ -82,5 +83,4 @@
       <ion-label slot="end">0,5 day</ion-label>
     </ion-item>
   </ion-list> -->
-
 </ion-content>
