--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -57,7 +57,7 @@
     </ion-col>
   </ion-row>
 
-  <calendar
+  <!-- <calendar
     [eventSource]="eventSource"
     [calendarMode]="calendar.mode"
     [currentDate]="calendar.currentDate"
@@ -66,8 +66,9 @@
     startHour="9"
     endHour="18"
     step="30"
-    startingDayWeek="1">
-  </calendar>
+    startingDayWeek="1"
+  >
+  </calendar> -->
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>
